--- a/services/service-product/src/main/resources/application.properties
+++ b/services/service-product/src/main/resources/application.properties
@@ -24,9 +24,9 @@ server.port=8083
 spring.application.name=service-product
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/product_service
+spring.datasource.url=jdbc:mysql://localhost:3306/service_product
 spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
@@ -41,3 +41,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.url=/service-product.yaml
