--- a/services/service-condition/src/main/resources/application.properties
+++ b/services/service-condition/src/main/resources/application.properties
@@ -1,28 +1,25 @@
-spring.application.name=service-repair
-server.port=8084
+# New Condition Service
+# src/main/resources/application.properties
+spring.application.name=service-condition
+
+server.port=8087
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/repair_service
+spring.datasource.url=jdbc:mysql://localhost:3307/service_condition
 spring.datasource.username=root
 spring.datasource.password=1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate Configuration
+# JPA / Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
-# External service URLs
-service.notification.url=http://service-notification
-service.warranty.url=http://service-warranty
-service.product.url=http://service-product
-
 # Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.preferIpAddress=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # Logging
-logging.level.com.example.service_repair=INFO
+logging.level.com.example.service_condition=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 # Actuator
