--- a/services/service-notification/src/main/resources/application.properties
+++ b/services/service-notification/src/main/resources/application.properties
@@ -25,4 +25,14 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 # eureka.instance.preferIpAddress=true
 
+
+# config kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=notification-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.*
+
+
 service.customer.url=http://service-customer
