--- a/services/service-warranty/src/main/resources/application.properties
+++ b/services/service-warranty/src/main/resources/application.properties
@@ -18,6 +18,7 @@ service.product.url=http://service-product
 service.repair.url=http://service-repair
 service.notification.url=http://service-notification
 service.customer.url=http://service-customer
+service.condition.url=http://service-condition
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
@@ -28,3 +29,8 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+#kafka properties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
