--- a/services/service-technician/src/main/resources/application.properties
+++ b/services/service-technician/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=service-technician
-server.port=8086
+server.port=8082
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/service_technician?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/service_technician
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
