--- a/services/service-warranty/src/main/resources/application.properties
+++ b/services/service-warranty/src/main/resources/application.properties
@@ -19,6 +19,7 @@ service.repair.url=http://service-repair
 service.notification.url=http://service-notification
 service.customer.url=http://service-customer
 service.condition.url=http://service-condition
+service.technician.url=http://service-technician
 
 # Eureka Client Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
